feat: optimize the whole logic and add new and old benchmark