@@ -6,6 +6,7 @@ import az.zeynalov.memtable.Header;
 import az.zeynalov.memtable.Record;
 import az.zeynalov.memtable.SkipList;
 import org.openjdk.jmh.annotations.*;
+import org.openjdk.jmh.infra.Blackhole;
 import org.openjdk.jmh.runner.Runner;
 import org.openjdk.jmh.runner.RunnerException;
 import org.openjdk.jmh.runner.options.Options;
@@ -17,20 +18,6 @@ import java.util.TreeMap;
 import java.util.concurrent.ConcurrentSkipListMap;
 import java.util.concurrent.TimeUnit;
 
-/**
- * Benchmarks for SkipList with baseline comparisons against
- * java.util.TreeMap and java.util.concurrent.ConcurrentSkipListMap.
- *
- * Without a baseline, raw numbers are meaningless.
- * This benchmark answers: "Is my implementation fast compared to the JDK?"
- *
- * Run:
- *   mvn clean package -DskipTests
- *   java --enable-native-access=ALL-UNNAMED -jar target/benchmarks.jar
- *
- * Quick run (shorter, less accurate):
- *   java --enable-native-access=ALL-UNNAMED -jar target/benchmarks.jar -wi 2 -i 3 -f 1
- */
 @BenchmarkMode({Mode.Throughput, Mode.AverageTime})
 @OutputTimeUnit(TimeUnit.MICROSECONDS)
 @Warmup(iterations = 3, time = 2)
@@ -39,37 +26,20 @@ import java.util.concurrent.TimeUnit;
 public class SkipListBenchmark {
 
   // =========================================================================
-  //  State: Arena SkipList
+  //  ARENA STATE
   // =========================================================================
 
   @State(Scope.Thread)
-  public static class ArenaInsertState {
-    ArenaImpl arena;
-    SkipList skipList;
-    int counter;
-
-    @Setup(Level.Invocation)
-    public void setup() {
-      arena = new ArenaImpl();
-      skipList = new SkipList(arena);
-      skipList.init();
-      counter = 0;
-    }
-
-    @TearDown(Level.Invocation)
-    public void tearDown() {
-      arena.close();
-    }
-  }
-
-  @State(Scope.Thread)
-  public static class ArenaReadState {
+  public static class ArenaState {
     @Param({"1000", "10000", "100000"})
     int size;
 
     ArenaImpl arena;
     SkipList skipList;
-    Header[] searchHeaders;
+
+    Record[] recordsToInsert;
+    Header[] headersToGet;
+    Header missingHeader;
     int index;
 
     @Setup(Level.Trial)
@@ -77,13 +47,23 @@ public class SkipListBenchmark {
       arena = new ArenaImpl();
       skipList = new SkipList(arena);
       skipList.init();
-      searchHeaders = new Header[size];
 
+      recordsToInsert = new Record[size];
+      headersToGet = new Header[size];
+
+      // Pre-create all data to avoid benchmarking String/Object allocation
       for (int i = 0; i < size; i++) {
-        String key = "key" + String.format("%07d", i);
-        skipList.insert(createRecord(key, i, "value" + i));
-        searchHeaders[i] = createHeader(key, i);
+        String keyStr = "key" + String.format("%07d", i);
+        recordsToInsert[i] = createRecord(keyStr, i, "val" + i);
+        headersToGet[i] = createHeader(keyStr, i);
       }
+
+      // Pre-fill the skip list for the GET benchmarks
+      for (int i = 0; i < size; i++) {
+        skipList.insert(recordsToInsert[i]);
+      }
+
+      missingHeader = createHeader("ZZZZZZZ_missing", 999999);
       index = 0;
     }
 
@@ -92,148 +72,115 @@ public class SkipListBenchmark {
       arena.close();
     }
 
-    public Header nextSearchHeader() {
-      Header h = searchHeaders[index];
-      index = (index + 1) % size;
-      return h;
-    }
-  }
-
-  @State(Scope.Thread)
-  public static class ArenaScanState {
-    @Param({"1000", "10000"})
-    int size;
-
-    ArenaImpl arena;
-    SkipList skipList;
-
-    @Setup(Level.Trial)
-    public void setup() {
-      arena = new ArenaImpl();
-      skipList = new SkipList(arena);
-      skipList.init();
-
-      for (int i = 0; i < size; i++) {
-        String key = "key" + String.format("%07d", i);
-        skipList.insert(createRecord(key, i, "val" + i));
-      }
+    public Record nextRecord() {
+      return recordsToInsert[index++ % size];
     }
 
-    @TearDown(Level.Trial)
-    public void tearDown() {
-      arena.close();
+    public Header nextHeader() {
+      return headersToGet[index++ % size];
     }
   }
 
   // =========================================================================
-  //  State: JDK TreeMap baseline
+  //  JDK STATE (Baseline)
   // =========================================================================
 
   @State(Scope.Thread)
-  public static class TreeMapInsertState {
-    TreeMap<String, String> map;
-    int counter;
-
-    @Setup(Level.Invocation)
-    public void setup() {
-      map = new TreeMap<>();
-      counter = 0;
-    }
-  }
-
-  @State(Scope.Thread)
-  public static class TreeMapReadState {
+  public static class JdkState {
     @Param({"1000", "10000", "100000"})
     int size;
 
-    TreeMap<String, String> map;
+    TreeMap<String, String> treeMap;
+    ConcurrentSkipListMap<String, String> cslm;
+
     String[] keys;
+    String missingKey = "ZZZZZZZ_missing";
     int index;
 
     @Setup(Level.Trial)
     public void setup() {
-      map = new TreeMap<>();
+      treeMap = new TreeMap<>();
+      cslm = new ConcurrentSkipListMap<>();
       keys = new String[size];
 
       for (int i = 0; i < size; i++) {
-        String key = "key" + String.format("%07d", i);
-        map.put(key, "value" + i);
-        keys[i] = key;
+        keys[i] = "key" + String.format("%07d", i);
+        treeMap.put(keys[i], "val" + i);
+        cslm.put(keys[i], "val" + i);
       }
       index = 0;
     }
 
     public String nextKey() {
-      String k = keys[index];
-      index = (index + 1) % size;
-      return k;
-    }
-  }
-
-  @State(Scope.Thread)
-  public static class TreeMapScanState {
-    @Param({"1000", "10000"})
-    int size;
-
-    TreeMap<String, String> map;
-
-    @Setup(Level.Trial)
-    public void setup() {
-      map = new TreeMap<>();
-      for (int i = 0; i < size; i++) {
-        String key = "key" + String.format("%07d", i);
-        map.put(key, "val" + i);
-      }
+      return keys[index++ % size];
     }
   }
 
   // =========================================================================
-  //  State: JDK ConcurrentSkipListMap baseline
+  //  BENCHMARKS: INSERT
   // =========================================================================
 
-  @State(Scope.Thread)
-  public static class CslmInsertState {
-    ConcurrentSkipListMap<String, String> map;
-    int counter;
-
-    @Setup(Level.Invocation)
-    public void setup() {
-      map = new ConcurrentSkipListMap<>();
-      counter = 0;
-    }
+  @Benchmark
+  public void insert_arena(ArenaState state) {
+    // Note: In a real test, you'd want to reset the arena
+    // but for thrpt we just keep inserting.
+    state.skipList.insert(state.nextRecord());
   }
 
-  @State(Scope.Thread)
-  public static class CslmReadState {
-    @Param({"1000", "10000", "100000"})
-    int size;
-
-    ConcurrentSkipListMap<String, String> map;
-    String[] keys;
-    int index;
-
-    @Setup(Level.Trial)
-    public void setup() {
-      map = new ConcurrentSkipListMap<>();
-      keys = new String[size];
-
-      for (int i = 0; i < size; i++) {
-        String key = "key" + String.format("%07d", i);
-        map.put(key, "value" + i);
-        keys[i] = key;
-      }
-      index = 0;
-    }
-
-    public String nextKey() {
-      String k = keys[index];
-      index = (index + 1) % size;
-      return k;
-    }
+  @Benchmark
+  public void insert_treeMap(JdkState state) {
+    state.treeMap.put(state.nextKey(), "value");
   }
 
   // =========================================================================
-  //  Helpers
+  //  BENCHMARKS: GET
+  // =========================================================================
+
+  @Benchmark
+  public void get_arena(ArenaState state, Blackhole bh) {
+    bh.consume(state.skipList.get(state.nextHeader()));
+  }
+
+  @Benchmark
+  public void get_treeMap(JdkState state, Blackhole bh) {
+    bh.consume(state.treeMap.get(state.nextKey()));
+  }
+
+  @Benchmark
+  public void get_concurrentSkipListMap(JdkState state, Blackhole bh) {
+    bh.consume(state.cslm.get(state.nextKey()));
+  }
+
+  // =========================================================================
+  //  BENCHMARKS: GET MISS
+  // =========================================================================
+
+  @Benchmark
+  public void getMiss_arena(ArenaState state, Blackhole bh) {
+    bh.consume(state.skipList.get(state.missingHeader));
+  }
+
+  @Benchmark
+  public void getMiss_treeMap(JdkState state, Blackhole bh) {
+    bh.consume(state.treeMap.get(state.missingKey));
+  }
+
+  // =========================================================================
+  //  BENCHMARKS: SCAN
+  // =========================================================================
+
+  @Benchmark
+  public void scan_arena(ArenaState state, Blackhole bh) {
+    state.skipList.forEach(bh::consume);
+  }
+
+  @Benchmark
+  public void scan_treeMap(JdkState state, Blackhole bh) {
+    state.treeMap.forEach((k, v) -> bh.consume(k));
+  }
+
+  // =========================================================================
+  //  HELPERS
   // =========================================================================
 
   private static Header createHeader(String key, long sn) {
@@ -249,89 +196,6 @@ public class SkipListBenchmark {
     return new Record(header, footer);
   }
 
-  // =========================================================================
-  //  INSERT benchmarks
-  // =========================================================================
-
-  @Benchmark
-  public void insert_arena(ArenaInsertState state) {
-    int i = state.counter++;
-    String key = "key" + String.format("%07d", i);
-    state.skipList.insert(createRecord(key, i, "value" + i));
-  }
-
-  @Benchmark
-  public void insert_treeMap(TreeMapInsertState state) {
-    int i = state.counter++;
-    String key = "key" + String.format("%07d", i);
-    state.map.put(key, "value" + i);
-  }
-
-  @Benchmark
-  public void insert_concurrentSkipListMap(CslmInsertState state) {
-    int i = state.counter++;
-    String key = "key" + String.format("%07d", i);
-    state.map.put(key, "value" + i);
-  }
-
-  // =========================================================================
-  //  GET (point lookup) benchmarks
-  // =========================================================================
-
-  @Benchmark
-  public Record get_arena(ArenaReadState state) {
-    return state.skipList.get(state.nextSearchHeader());
-  }
-
-  @Benchmark
-  public String get_treeMap(TreeMapReadState state) {
-    return state.map.get(state.nextKey());
-  }
-
-  @Benchmark
-  public String get_concurrentSkipListMap(CslmReadState state) {
-    return state.map.get(state.nextKey());
-  }
-
-  // =========================================================================
-  //  SCAN (forEach / iterate all) benchmarks
-  // =========================================================================
-
-  @Benchmark
-  public int scan_arena(ArenaScanState state) {
-    int[] count = {0};
-    state.skipList.forEach(header -> count[0]++);
-    return count[0];
-  }
-
-  @Benchmark
-  public int scan_treeMap(TreeMapScanState state) {
-    int[] count = {0};
-    state.map.forEach((k, v) -> count[0]++);
-    return count[0];
-  }
-
-  // =========================================================================
-  //  GET miss (key not found) benchmarks
-  // =========================================================================
-
-  @Benchmark
-  public Record getMiss_arena(ArenaReadState state) {
-    return state.skipList.get(createHeader("ZZZZZZZZ_missing", 999999));
-  }
-
-  @Benchmark
-  public String getMiss_treeMap(TreeMapReadState state) {
-    return state.map.get("ZZZZZZZZ_missing");
-  }
-
-  @Benchmark
-  public String getMiss_concurrentSkipListMap(CslmReadState state) {
-    return state.map.get("ZZZZZZZZ_missing");
-  }
-
-  // ---- Main ----
-
   public static void main(String[] args) throws RunnerException {
     Options opts = new OptionsBuilder()
         .include(SkipListBenchmark.class.getSimpleName())
@@ -339,4 +203,3 @@ public class SkipListBenchmark {
     new Runner(opts).run();
   }
 }
-
